--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -68,7 +68,7 @@
             },
             function (e) {
                 //에러 콜백
-                alert('에러발생!!!!!!');
+                alert('로그인해주세요.');
             }
         );
     }
