--- a/src/main/resources/templates/chat/chatRoomListByPost.html
+++ b/src/main/resources/templates/chat/chatRoomListByPost.html
@@ -71,7 +71,7 @@
             },
             function (e) {
                 //에러 콜백
-                alert('에러발생!!!!!!');
+                alert('로그인해주세요.');
             }
         );
     }
