--- a/src/main/resources/templates/chat/chatTest.html
+++ b/src/main/resources/templates/chat/chatTest.html
@@ -46,7 +46,7 @@
             },
             function(e){
                 //에러 콜백
-                alert('에러발생!!!!!!');
+                alert('로그인해주세요.');
             }
         );
     }
