--- a/src/main/resources/templates/post/searchList.html
+++ b/src/main/resources/templates/post/searchList.html
@@ -45,7 +45,7 @@
                         <li th:classappend="${pageNumber < pageSize} ? 'disabled'" class="page-item">
                             <a class="page-link" th:href="@{/post/search(word=${searchedWord}, page=0)}">
                                 <span>&laquo;</span>
-                                <span class="sr-only">First</span>
+<!--                                <span class="sr-only">First</span>-->
                             </a>
                         </li>
 
@@ -53,7 +53,7 @@
                         <li th:classappend="${postList.first} ? 'disabled'" class="page-item">
                             <a class="page-link" th:href="${postList.first} ? '#' : @{/post/search(word=${searchedWord}, page=${pageNumber - 1})}" aria-label="Previous">
                                 <span aria-hidden="true">&lt;</span>
-                                <span class="sr-only">Previous</span>
+<!--                                <span class="sr-only">Previous</span>-->
                             </a>
                         </li>
 
@@ -66,7 +66,7 @@
                         <li th:classappend="${postList.last} ? 'disabled'" class="page-item">
                             <a class="page-link" th:href="${postList.last} ? '#' : @{/post/search(word=${searchedWord}, page=${pageNumber + 1})}" aria-label="Next">
                                 <span aria-hidden="true">&gt;</span>
-                                <span class="sr-only">Next</span>
+<!--                                <span class="sr-only">Next</span>-->
                             </a>
                         </li>
 
@@ -74,7 +74,7 @@
                         <li th:classappend=" ${T(java.lang.Math).floor(totalPages / pageSize) * pageSize - 1 <= startPage} ? 'disabled'" class="page-item">
                             <a class="page-link" th:href="@{/post/search(word=${searchedWord}, page=${totalPages - 1})}">
                                 <span>&raquo;</span>
-                                <span class="sr-only">Last</span>
+<!--                                <span class="sr-only">Last</span>-->
                             </a>
                         </li>
                     </ul>
