--- a/src/main/resources/templates/post/upload_page.html
+++ b/src/main/resources/templates/post/upload_page.html
@@ -12,65 +12,67 @@
 
 
 <div layout:fragment="content">
-    <div class="container container-sm container-item-create">
-        <h2 class="container-headline ">중고거래 글쓰기</h2>
-        <form id="upload_form" class="form-item-create">
-            <div class="form-group form-picture">
-                <div class="file-box">
-                <!--사진선택-->
-                    <div class="inputFile">
-                    <label for='inputImage' class="addImgBtn text-center"><i class="bi bi-camera fs-1"></i></label>
-                    <input type="file" multiple="multiple" name="uploadFiles" id='inputImage' accept="image/*" style="display: none;">
+    <section class="py-5">
+        <div class="container px-4 my-5">
+            <div class="container container-sm container-item-create">
+                <h2 class="container-headline text-center">중고거래 글쓰기</h2>
+                <form id="upload_form" class="form-item-create">
+                    <div class="form-group form-picture">
+                        <div class="file-box">
+                        <!--사진선택-->
+                            <div class="inputFile">
+                            <label for='inputImage' class="addImgBtn text-center"><i class="bi bi-camera fs-1"></i></label>
+                            <input type="file" multiple="multiple" name="uploadFiles" id='inputImage' accept="image/*" style="display: none;">
+                            </div>
+                        <!--사진 미리보기-->
+                            <ul id="Preview" class="sortable"></ul>
+                        </div>
+                        <div class="uploadResult"></div>
                     </div>
-                <!--사진 미리보기-->
-                    <ul id="Preview" class="sortable"></ul>
-                </div>
-                <div class="uploadResult"></div>
+
+
+
+                <div class="form-group form-title">
+                        <input type="text" class="form-control" id="productsTitle" name="title" placeholder="제목">
+                    </div>
+                    <div class="form-group form-category">
+                        <select id="productsCategory" class="form-control" name="category">
+                            <option value="" disabled selected>카테고리를 선택해주세요.</option>
+                            <!--카테고리: thymeleaf이용해 Enum클래스 정보 바로 가져오기-->
+                            <option th:each = "categoryList:${T(com.exercise.carrotproject.domain.enumList.Category).values()}" th:value="${categoryList.name}" th:text="${categoryList.category}"></option>
+                        </select>
+                    </div>
+                    <div class="form-group form-price">
+                        <input type="number" class="form-control" id="productsPrice" name="price" min="0" step="1000" placeholder="가격을 입력해주세요. (￦)">
+                    </div>
+                    <div class="form-group form-description">
+                        <textarea class="form-control" id="productsDescription" name="content" rows="10" placeholder="제품 설명을 작성해주세요."></textarea>
+                    </div>
+                </form>
+
+                    <!--거래희망장소-->
+                    <button id="regPlace" class="btn btn-outline-secondary" type="button">거래희망장소 선택하기</button>
+                    <!--카카오맵 지도-->
+                    <div id="mapArea">
+                        <br/>
+                        <p class="fw-bold fs-6">거래 희망하는 장소를 지도에서 클릭해주세요!</p>
+
+                        <div id="map" style="width:100%;height:350px; margin: 20px;"></div>
+
+                        <div id="inputPlace" class="form-group form-car-mileage" style="display: none;">
+                            <input type="text" class="form-control" id="placeInfo" name="placeInfo" placeholder="장소명을 입력해주세요. 예)강남역 1번 출구">
+                        </div>
+                        <button id="cfmPlace" class="btn btn-outline-secondary" type="button" style="display: none;">장소선택하기</button>
+
+                        <!--                <div id="clickLatlng"></div>-->
+                        <button id="noPlace" class="btn btn-outline-secondary" type="button" >장소선택 안함</button>
+                    </div>
+
+                    <br/><br/>
+                    <button type="button" id="uploadBtn" class="btn-orange">상품 등록하기</button>
             </div>
-
-
-
-        <div class="form-group form-title">
-                <input type="text" class="form-control" id="productsTitle" name="title" placeholder="제목">
-            </div>
-            <div class="form-group form-category">
-                <select id="productsCategory" class="form-control" name="category">
-                    <option value="" disabled selected>카테고리를 선택해주세요.</option>
-                    <!--카테고리: thymeleaf이용해 Enum클래스 정보 바로 가져오기-->
-                    <option th:each = "categoryList:${T(com.exercise.carrotproject.domain.enumList.Category).values()}" th:value="${categoryList.name}" th:text="${categoryList.category}"></option>
-                </select>
-            </div>
-            <div class="form-group form-price">
-                <input type="number" class="form-control" id="productsPrice" name="price" min="0" step="1000" placeholder="가격을 입력해주세요. (￦)">
-            </div>
-            <div class="form-group form-description">
-                <textarea class="form-control" id="productsDescription" name="content" rows="10" placeholder="제품 설명을 작성해주세요."></textarea>
-            </div>
-        </form>
-
-            <!--거래희망장소-->
-            <button id="regPlace" class="btn btn-outline-secondary" type="button">거래희망장소 선택하기</button>
-            <!--카카오맵 지도-->
-            <div id="mapArea">
-                <br/>
-                <p class="fw-bold fs-6">거래 희망하는 장소를 지도에서 클릭해주세요!</p>
-
-                <div id="map" style="width:100%;height:350px; margin: 20px;"></div>
-
-                <div id="inputPlace" class="form-group form-car-mileage" style="display: none;">
-                    <input type="text" class="form-control" id="placeInfo" name="placeInfo" placeholder="장소명을 입력해주세요. 예)강남역 1번 출구">
-                </div>
-                <button id="cfmPlace" class="btn btn-outline-secondary" type="button" style="display: none;">장소선택하기</button>
-
-                <!--                <div id="clickLatlng"></div>-->
-                <button id="noPlace" class="btn btn-outline-secondary" type="button" >장소선택 안함</button>
-            </div>
-
-            <br/><br/>
-            <button type="button" id="uploadBtn" class="btn-orange">상품 등록하기</button>
-
-
-    </div>
+        </div>
+    </section>
 </div>
 
 <div layout:fragment="script" th:inline="javascript">
