리뷰작성폼 css

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -11399,7 +11399,9 @@ textarea.form-control-lg {
 .bd-top-grey{
   border-top: 1px solid grey;
 }
-
+.bd-top-grey-custom{
+  border-top: 1px solid #ccc;
+}
 
 .ft-text{
   color: grey;
