--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -35,7 +35,7 @@
             </section>-->
             <!-- Footer-->
             <footer>
-                <div class="container bd-top-grey py-sm-5 px-5">
+                <div class="container bd-top-grey-custom py-sm-5 px-5">
                     <section class="ft-section">
                         <section>
                             <div class="ft-text"><b>팀원 </b> 박재경 최혜은 남호용</div>
