--- a/src/main/resources/static/css/review_form.css
+++ b/src/main/resources/static/css/review_form.css
@@ -1,4 +1,8 @@
 p {margin-top:0; margin-bottom: 0px;}
+input[type="checkbox"] {
+    accent-color: #f1f3f5;
+}
+
 .form-container {
     min-height: 700px;
     margin-bottom: 50px;
