--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -16,10 +16,10 @@
           <h2>로그인</h2>
         </div>
         <form action="" th:action th:object="${loginForm}" method="post">
-          <!--<div th:if="${#fields.hasGlobalErrors()}">
+          <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}"
                th:text="${err}">전체 오류 메시지</p>
-          </div>-->
+          </div>
           <div class="input">
             <label for="loginId">로그인 ID</label>
             <input type="text" id="loginId" th:field="*{loginId}"
