--- a/src/main/resources/templates/post/update_post.html
+++ b/src/main/resources/templates/post/update_post.html
@@ -21,7 +21,7 @@
                         <div class="file-box">
                             <!--이미지-->
                             <div class="inputFile">
-                                <label for='inputImage' class="addImgBtn">사진추가</label>
+                                <label for='inputImage' class="addImgBtn text-center"><i class="bi bi-camera fs-1"></i></label>
                                 <input type="file" multiple="multiple" name="uploadFiles" id='inputImage' accept="image/*" style="display: none;">
                             </div>
                             <!--이미지 미리보기-->
