--- a/src/main/resources/templates/myPage/wishList.html
+++ b/src/main/resources/templates/myPage/wishList.html
@@ -33,6 +33,8 @@
                                     <p class="fw">[[${post.loc.locName}]] / [[${post.createdTime}]]</p>
                                     <!-- 가격-->
                                     <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
+                                    <h6 class="fw-bolder" th:if="${post.price} == 0">가격없음</h6>
+
                                 </div>
                             </div>
                         </div>
