--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -4,7 +4,7 @@
 }
 .signup-container .signup-border {
     height: auto;
-    width: 400px;
+    width: 450px;
     border: 1px solid #f1f3f5;
     border-radius: 20px;
     box-shadow: 0px 5px 10px 0px #f1f3f5;
@@ -25,3 +25,44 @@
 .bottom-sec .bottom-btn {
     margin-top: 30px;
 }
+
+.send {
+
+}
+.email, .send {
+    display: inline-block;
+}
+.send .send-btn {
+    height: 38px;
+    display: inline-block;
+    font-weight: 500;
+    line-height: 1.5;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color:#ff9d0a ;
+    border: 1px solid #ff9d0a;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+@media (prefers-reduced-motion: reduce) {
+    .send-btn {
+        transition: none;
+    }
+}
+.send-btn:hover, send-btn:active {
+    color: #333;
+    background-color: transparent;
+    border-color: #333;
+}
+.signup-btn {
+
+}ㅣ
