--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -38,7 +38,7 @@
           <div class="bottom-sec">
             <div class="bottom-links">
               <a class="bottom-link">아이디 찾기</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-              <a class="bottom-link">비밀번호 재설정</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+              <a class="bottom-link" th:href="@{/members/findPwd}">비밀번호 재설정</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
               <a class="bottom-link" th:href="@{/members/signup}" >회원가입</a>
             </div>
             <div class="bottom-login">
@@ -57,8 +57,5 @@
   </section>
 </div>
 
-<div layout:fragment="script" >
-  <script th:inline="javascript">
-  </script>
-</div>
+ㅣ
 </html>
