--- a/src/main/resources/templates/member/signupForm.html
+++ b/src/main/resources/templates/member/signupForm.html
@@ -20,7 +20,7 @@
                 <h6 class="text-center">[[${platform}]]로 로그인되었습니다. </h6>
                 <h6 class="mt-3 mb-4 text-center">[[${platform}]]계정으로 망고마켓 가입이 필요합니다.</h6>
                 <form id="socialForm">
-                    <input type="hidden" id="email" th:value="${userInfo.get('email')}">
+                    <input type="hidden" id="emailSocial" th:value="${userInfo.get('email')}">
                     <input type="hidden" id="profPath" th:value="${userInfo.get('profPath')}">
                     <div class="input">
                         <label for="locSocial">내 동네</label>
@@ -71,6 +71,18 @@
                                th:errorclass="field-error">
                         <div class="field-error" th:errors="*{pwdConfirm}" />
                     </div>
+                    <div class="input" id="input-email">
+                        <label for="email" style="display: block">이메일</label>
+                        <input type="text" id="email" th:field="*{email}"
+                               class="form-control" style="display: inline-block; width:73%">
+                        <div class="send">
+                            <button class="send-btn" id="sendCode" type="button">
+                              이메일 인증
+                            </button>
+                        </div>
+                        <div id="email-error"></div>
+                        <div class="field-error" th:errors="*{email}" />
+                    </div>
                     <div class="input">
                         <label for="nickname">닉네임</label>
                         <input type="text" id="nickname" th:field="*{nickname}"
@@ -87,11 +99,10 @@
                         </select>
                         <div class="field-error" th:errors="*{loc}"> </div>
                     </div>
-
                     <div class="bottom-sec">
                         <div class="bottom-btn">
-                            <button class="w-100 btn btn-orange btn-lg"
-                                    type="submit"> 회원 가입 </button>
+                            <button class="w-100 btn btn-orange btn-lg" disabled
+                                    type="submit" id="signup-btn"> 회원 가입 </button>
                         </div>
                         <div class="bottom-social" id="kakao" th:onclick="|location.href='@{/login/getKakaoLoginURL}'|">
                             <button class="btn-kakao" type="button">
@@ -118,12 +129,12 @@
             data:  JSON.stringify({
                 loc : $("select[name=locSocial]").val(),
                 nickname : $('#nicknameSocial').val(),
-                email : $('#email').val(),
+                email : $('#emailSocial').val(),
                 profPath : $('#profPath').val(),
             }),
             contentType: "application/json; charset=utf-8",
             success: function (data) {
-                alert("회원가입에 성공했습니다");
+                alert("회원가입에 성공했습니다.");
                 location.href="/"
             },
             error: function (err) {
@@ -132,6 +143,61 @@
                 console.log(message.nickname);
                 $('#nick-error').replaceWith(`<div id="nick-error" class="field-error">${message.nickname}</div>`)
                 $("#nicknameSocial").addClass("field-error-border");
+            }
+        })
+    }
+    $('#sendCode').click(function() {
+        $.ajax({
+            type: "POST",
+            url: "signup/emailConfirm",
+            data: {
+                "email": $('#email').val()
+            }
+        }).done(function (data) {
+            alert("해당 이메일로 인증번호 발송이 완료되었습니다.")
+            $('#email-error').replaceWith(`<div id="email-error"></div>`)
+            $('#email').removeClass("field-error-border");
+            const str = `<div class="form-group last mb-4 check_input">
+                    <label for="emailConfirm" id="emailConfirmTxt">인증번호를 입력해주세요</label>
+                    <input type="text" class="form-control" id="emailConfirm">
+                </div>`
+            $('#input-email').append(str);
+            chkEmailConfirm(data.authCode, $('#emailConfirm'), $('#emailConfirmTxt'));
+        }).fail(function (err) {
+            const message = err.responseJSON;
+            console.log(message);
+            if (message.email) {
+                console.log(message.email)
+                $('#email-error').replaceWith(`<div id="email-error" class="field-error">${message.email}</div>`)
+                $('#email').addClass("field-error-border");
+            }
+            if ('duplicated-email' in message) {
+                $('#email-error').replaceWith(`<div id="email-error" class="field-error">중복된 이메일입니다.</div>`)
+                $('#email').addClass("field-error-border");
+            }
+        })
+    })
+    // 이메일 인증번호 체크 함수
+    function chkEmailConfirm(data, emailConfirm, emailConfirmTxt){
+        emailConfirm.on("keyup", function(){
+            if (data != emailConfirm.val()) { //
+                let emailCheck = false;
+                emailConfirmTxt.html("<span id='checkTxt'>인증번호가 잘못되었습니다</span>")
+                $("#checkTxt").css({
+                    "color" : "#FA3E3E",
+                    "font-weight" : "bold",
+                    "font-size" : "10px"
+                })
+            } else { // 아니면 중복아님
+                let emailCheck = true;
+                emailConfirmTxt.html("<span id='checkTxt'>인증번호 확인 완료</span>")
+                $("#checkTxt").css({
+                    "color" : "#0D6EFD",
+                    "font-weight" : "bold",
+                    "font-size" : "10px"
+                })
+                const target = document.getElementById('signup-btn');
+                target.disabled = false;
             }
         })
     }
